  - plastic look retained for highlighted comparisons
  - new argument D.matrix to provide treatment distances directly

  * netmeta():
    - function can be used with a single pairwise comparison without
      resulting in an error

  * print.netmeta():
    - use correct layout for network meta-analysis with a single
      pairwise comparison

  * netconnection():
    - print sensible error message if argument treat2 is missing or of
      different length than argument treat 1

  * netdistance():
    - print sensible error message if argument A is not a matrix

  * Help pages updated:
    decomp.design(), print.decomp.design(),
    netgraph(), netheat(), netmeasures()
    
 ** Internal changes **

  * New function:
    - shadowtext() to print number of studies

  * nma.ruecker():
    - keep dimension of matrices W and B.matrix for network
      meta-analysis with a single pairwise comparison


2016-04-26, version 0.9-0

New functions:
- netdistance (calculate distance matrix; replacement for internal
  function nodedist)
- netconnection (Get connectivity information for network)
- print.netconnection (corresponding print function)

Internal function nodedist removed (replaced by netdistance function)

Import functions from R package rgl (for 3-D plots)

New dataset Woods2010 (use long format in pairwise function)

Function netmeta:
- check connectivity of network and stop with informative error
  message if network is not fully connected
- new list components:
  'Cov.fixed' (variance-covariance matrix for fixed effect model)
  'Cov.random' (variance-covariance matrix for random effects model)

Function pairwise:
- extension to long data format (see example on help page)

Function netmeta:
- new arguments 'dim', 'eig3', and 'zpos' to generate 3-D network
  plots

Function stress (used internally):
- extension to generate 3-D network plots
- use netdistance function instead of nodedist

Function nma.ruecker (used internally):