@@ -1,6 +1,6 @@
 Package: netmeta
 Title: Network Meta-Analysis using Frequentist Methods
-Version: 0.9-1-2
+Version: 0.9-1-3
 Depends: meta (>= 4.0-0)
 Suggests: colorspace
 Imports: magic, rgl
